setup-scripts/60-etherpad/etherpad-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etherpad
  namespace: etherpad
  labels:
    app: etherpad  
spec:
  selector:
    matchLabels:
      app: etherpad
  replicas: 1
  template:
    metadata:
      labels:
        app: etherpad
      annotations:
        backup.velero.io/backup-volumes: etherpad-data
    spec:
      containers:
      - name: etherpad
        image: "etherpad/etherpad"
        volumeMounts:
        - name: etherpad-data
          mountPath: /etherpad-data
        - name: etherpad-settings
          mountPath: /opt/etherpad-lite/settings.json
          subPath: settings.json
      volumes:
      - name: etherpad-data
        persistentVolumeClaim:
          claimName: etherpad-data-pvc
      - name: etherpad-settings
        configMap:
          name: etherpad-settings-cm
