setup-scripts/60-etherpad/etherpad-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etherpad-service
  namespace: etherpad
  labels:
    app: etherpad
spec:
  selector:
    app: etherpad
  ports:
  - port: 80
    targetPort: 9001
    protocol: TCP
